tests/snapshots/sfc/ts/options_api__lifecycle_hooks.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

const _sfc_main = {
  data() {
    return { ready: false }
  },
  created() {
    this.ready = false
  },
  mounted() {
    this.ready = true
  },
  beforeUnmount() {
    this.ready = false
  }
}

import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_ctx.ready), 1 /* TEXT */))
}
_sfc_main.render = _sfc_render
export default _sfc_main
