tests/snapshots/sfc/ts/options_api__methods_with_event_handler.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

const _sfc_main = {
  data() {
    return { count: 0 }
  },
  methods: {
    increment() {
      this.count++
    }
  }
}

import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("button", { onClick: $options.increment }, _toDisplayString($data.count), 9 /* TEXT, PROPS */, ["onClick"]))
}
_sfc_main.render = _sfc_render
export default _sfc_main
