tests/snapshots/sfc/ts/options_api__mixins_and_extends_combined.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

import Base from './Base.vue'
import { sharedMixin } from './mixins.js'

const _sfc_main = {
  extends: Base,
  mixins: [sharedMixin],
  data() {
    return { own: true }
  }
}

import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_ctx.own), 1 /* TEXT */))
}
_sfc_main.render = _sfc_render
export default _sfc_main
