tests/snapshots/sfc/ts/options_api__props_array_form.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_ctx.title) + ": " + _toDisplayString(_ctx.count), 1 /* TEXT */))
}

const _sfc_main = {
  props: ['title', 'count']
}

_sfc_main.render = _sfc_render
export default _sfc_main
