tests/snapshots/sfc/ts/options_api__props_object_form_with_defaults.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

const _sfc_main = {
  props: {
    title: String,
    count: {
      type: Number,
      default: 0,
      required: false
    },
    items: {
      type: Array,
      default() {
        return []
      }
    }
  }
}

import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_ctx.title) + ": " + _toDisplayString(_ctx.count) + " (" + _toDisplayString(_ctx.items.length) + ")", 1 /* TEXT */))
}
_sfc_main.render = _sfc_render
export default _sfc_main
