tests/snapshots/sfc/ts/options_api__script_and_script_setup_combined.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { ref } from 'vue'

const __default__ = {
  inheritAttrs: false,
  name: 'Combined'
}

export default /*@__PURE__*/Object.assign(__default__, {
  __name: 'test',
  setup(__props) {

const count = ref(0)

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(count.value), 1 /* TEXT */))
}
}

})
